# T-bot

./: README.md  pyproject.toml
t_bot/: main.py
t_bot/handlers/: menu.py  not_menu.py  quiz.py  random.py
t_bot/keybords/: base.py  factories.py  keybords.py
t_bot/utils/: gpt_service.py  the_state_machine.py
